--- a/src/views/mergetool.html
+++ b/src/views/mergetool.html
@@ -3,9 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-
+    
     <title>MergeTool</title>
+    <script type="text/javascript" src="./js/highlight.min.js"></script>
+    <link href="./css/highlight.css" rel="stylesheet" />
 </head>
 <body>
     <h1>MERGETOOL</h1>
